# SoftRenderDemo

./: .gitignore  CMakeLists.txt  README.md  SoftRender.sln
SoftRender/: AABB.cpp  AABB.h  App.cpp  Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  Frustum.cpp  Frustum.h  IFile.cpp  Light.h  Material.h  Object.cpp  Object.h  Plane.cpp  RenderBuffer.h  ResourceManager.cpp  ResourceManager.h  Shader.h  SoftRender.vcxproj  SoftRender.vcxproj.filters  SoftwareRender.cpp  SoftwareRender.h  SoftwareRenderAPI.cpp  SoftwareRenderAPI.h  SoftwareRenderApp.cpp  SoftwareRenderContext.cpp  SoftwareRenderState.cpp  SoftwareRenderState.h  SoftwareRenderWnd.cpp  SoftwareRenderWnd.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  Vertex.h  log.h  main.cpp  type.cpp  type.h
src/SoftRender/: AABB.h  CMakeLists.txt  Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  IFile.cpp  IFile.h  Light.h  Material.h  Object.cpp  Plane.h  ResourceManager.cpp  ResourceManager.h  Shader.h  SoftwareRender.cpp  SoftwareRenderContext.cpp  SoftwareRenderContext.h  SoftwareRenderState.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
src/Test/: App.cpp  App.h  CMakeLists.txt  SoftwareRenderApp.cpp  SoftwareRenderApp.h  main.cpp
